--- a/cit230-links.html
+++ b/cit230-links.html
@@ -16,6 +16,9 @@
 <p><strong><a href="cit230/indv-design-docs/w3-site-diagram.pdf">w3-site-diagram.pdf</a></strong>&lt;list due date here&gt;</p>
 <p><strong><a href="cit230/indv-design-docs/week4-ponder-prove-alt.html">w4-ponder-prove-alt.html</a></strong>&lt;list due date here&gt;</p>
 <p><strong><a href="cit230/indv-design-docs/week4-ponder-prove-completed.html">w4-ponder-prove-completed</a></strong>&lt;list due date here&gt;</p>
+<p><strong><a href="cit230/indv-design-docs/week4-ponder-prove-completed.html">w4-ponder-prove-completed</a></strong>&lt;list due date here&gt;</p>
+<p><strong><a href="cit230/indv-design-docs/week4-ponder-prove-completed.html">w4-ponder-prove-completed</a></strong>&lt;list due date here&gt;</p>
+<p><strong><a href="cit230/indv-design-docs/week6-ponder-prove.html">w6-ponder-prove</a></strong>&lt;list due date here&gt;</p>
 <p><strong>other documents will follow </strong> &lt;list due date here&gt;</p>
 </body>
 </html>
